<resources>
    <string name="app_name">Memory Matrix</string>
    <string name="startLabel">Start</string>
    <string name="app_logo_description">Application logo</string>
    <string name="touch_to_start">Touch to start</string>
    <string name="about">About</string>
    <string name="author_image_description">Paulo Pereira</string>
    <string name="by">by</string>
    <string name="author_name">Paulo Pereira</string>
    <string name="inspired_by">Inspired by:</string>
    <string name="paulo_pereira">Paulo Pereira</string>
    <string name="on_twitch">On Twitch</string>
    <string name="on_youtube">on YouTube</string>
    <string name="on_linkedin">On LinkedIn</string>
    <string name="lumosity">Lumosity</string>
    <string name="select_level">Select level</string>
    <string name="play">Play</string>
    <string name="highest_level_reached">Highest level reached</string>
    <string name="history_item_score">Score = %1$s</string>
</resources>